--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "python-dotenv>=1.0.1",
     "shioaji>=1.2.5",
 ]
 
 [project.scripts]
 hello = "sj_trading:hello"
+main = "sj_trading:main"
 
 [build-system]
 requires = ["hatchling"]
