--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "polars-talib>=0.1.3",
+    "polars>=1.9.0",
     "python-dotenv>=1.0.1",
-    "shioaji>=1.2.5",
+    "shioaji[speed]>=1.2.5",
 ]
 
 [project.scripts]
@@ -19,3 +21,8 @@ futures_testing = "sj_trading.testing_flow:testing_futures_ordering"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv]
+dev-dependencies = [
+    "ipykernel>=6.29.5",
+]
